search redesign: apply search results QA fixes (#21421)
* change 'repository name match' to 'repository match'

* align sidebar collapse icon with margin

* add 0.25rem extra padding between search results

* search progress should have rounded corners

* tighten gap in sidebar responsive layouts

* don't add bottom margin to the last search result

* tweak sidebar spacing

--- a/client/web/src/search/results/streaming/sidebar/SearchSidebar.module.scss
+++ b/client/web/src/search/results/streaming/sidebar/SearchSidebar.module.scss
@@ -27,12 +27,11 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            gap: 1.5rem;
+            column-gap: 1.5rem;
         }
 
         @media (--xs-breakpoint-down) {
-            flex-direction: column;
-            flex-wrap: nowrap;
+            display: block;
         }
     }
 }
